# coverage-plot

./: .bumpversion.cfg  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: tests.yml
coverage_plot/: __init__.py  cli.py  fake_implementations.py  git_changes.py  importance_filesize.py  importance_interface.py  importance_recency.py  plot.py
docs/: Makefile  conf.py  index.rst  tutorial.rst
tests/: test_coverage_plot.py  test_git_changes.py
