[tool.poetry]
name = "coverage-plot"
version = "0.2.0"
description = "Library to plot Python code coverage results"
readme = "README.md"
homepage = "https://github.com/imankulov/coverage-plot"
repository = "https://github.com/imankulov/coverage-plot"
authors = ["Roman Imankulov <roman.imankulov@gmail.com>"]
license = "MIT"
classifiers = [
    "Intended Audience :: Developers",
]
include = [
    "CHANGELOG.md"
]


[tool.poetry.scripts]
coverage-plot = "coverage_plot.cli:coverage_plot"

[tool.poetry.dependencies]
python = "^3.8"
plotly = "^4.8.2"
pandas = "^1.0.5"
attrs = "^19.3.0"
click = "^8.1.2"
pydriller = "^1.15.2"
sphinx = {version = "^3", optional = true}

[tool.poetry.extras]
docs = ["sphinx"]

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
black = "^19.10b0"
flake8 = "^3.7.9"
mypy = "^0.782"
coverage = {extras = ["toml"], version = "^5.2"}
ipython = "^7.16.1"
faker = "^4.1.1"
pdbpp = "^0.10.2"
sphinx = "^3.1.2"

[tool.coverage.run]
source = ["coverage_plot"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
